# gridquery

./: .env.example  .gitignore  Makefile  PRD.md  README.md  claude.md  pyproject.toml
app/: Home.py  governed.py
app/pages/: 1_Demand_Growth_Leaderboard.py  2_Generation_Mix.py  3_Eval_Results.py  4_Demand_Explorer.py  5_Generation_Explorer.py
app/tests/: test_smoke.py
docs/: ROADMAP.md  eval_report.md  frontend.md  metric_catalog.md  nl_interface.md  phase1_data_profile.md  phase3_explained_simple.md  verification_anchors.md
docs/plans/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
eval/: __init__.py  __main__.py  artifact.py  batch.py  golden.py  golden_results.json  golden_set.yaml  pin.py  report.py  score.py
eval/results/: latest.json
eval/tests/: conftest.py  test_artifact.py  test_batch.py  test_golden.py  test_report.py  test_score.py
ingest/: eia930_pipeline.py
nl/: __init__.py  __main__.py  answer.py  catalog.py  executor.py  interface.py  planner.py  schema.py  validator.py
nl/tests/: conftest.py  test_catalog.py  test_executor_answer.py  test_live_smoke.py  test_offline_edges.py  test_planner_request.py  test_validator.py  test_validator_adversarial.py
scripts/: profile_phase1.py
semantic/: cube.js  docker-compose.yml
semantic/tests/: conftest.py  test_demand_metrics.py  test_generation_metrics.py  test_growth_metrics.py  test_meta_governance.py
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/macros/: generate_schema_name.sql
transform/seeds/: _seeds.yml  balancing_authorities.csv  (+1 more)
(+21 files in other folders)
