[project]
name = "gridquery"
version = "0.1.0"
description = "Governed semantic layer with an evaluated NL interface over U.S. grid demand data (EIA-930 via PUDL)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.116.0",
    "dbt-core>=1.9",
    "dbt-duckdb>=1.9",
    "dlt[duckdb]>=1.6",
    "duckdb>=1.1",
    "pyarrow>=18",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# The repo is not an installed package; make top-level packages (nl/) importable.
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "requests>=2.34.2",
]
